[package]
name = "pie"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pie"

[features]
default = []
cpi = ["no-entrypoint"]
devnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
raydium-cpmm-cpi = { path = "../../modules/cpmm-cpi", features = [
    "no-entrypoint",
    "cpi",
    "devnet",
] }
raydium-clmm-cpi = { path = "../../modules/clmm-cpi", features = [
    "no-entrypoint",
    "cpi",
] }
